- Added challenges - Changed Java version - Enhanced challenges